@@ -2120,4 +2120,7 @@ TorrentInfoView.columns=Columns from 'My Torrents' view
 progress.window.title=Operation In Progress
 progress.window.msg.filemove=Please wait while the file move/rename completes
 
+ConfigView.label.popup.timestamp=Add timestamps to popup alerts
+ConfigView.label.popup.autohide=Automatically hide non-error popup alerts after x seconds (set to 0 to disable auto hiding)
+
 #PLEASE LEAVE ME AT VERY BOTTOM!
